--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Erica+One&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/25924af81d/UntitledProject/style.css">
+    <link rel="stylesheet" href=icomoon/style.css>
   </head>
   <body>
     <div class="ingreso">
