--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
         <div class="muestraTexto muestraFuente">
           <h3>Colección Marcel Duchamp</h3>
           <p>
-            Recorremos la vida y obra del artista francés. Duchamp, que no 
-            pertenece a ninguna corriente artística precisa, tiene un estilo
-            único. Rompiendo los códigos artísticos y estéticos entonces
+            Recorremos la vida y obra del artista francés. Duchamp tiene un estilo
+            único, rompiendo los códigos artísticos y estéticos entonces
             vigentes, es considerado como el precursor de algunos aspectos más
             radicales de la evolución del arte desde 1945.
           </p>
@@ -142,6 +141,7 @@
         <ul>
           <li>FAQ</li>
         <li>Trabajá con nosotros</li>
+        <li>Contacto</li>
         <li>Politicas de privacidad</li>
       </ul>
       </div>
