subo nuevo html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href=icomoon/style.css>
   </head>
   <body>
-    <div class="ingreso">
+    <div class="ingreso" id="inicio">
       <a href="">Ingreso socios</a>
       <a href="">registrate</a>
     </div>
@@ -39,7 +39,7 @@
           class="collapse navbar-collapse"
           id="navbarTogglerDemo01"
         >
-        <a class="navbar-brand macba" href="#">MACBA</a>
+        <a class="navbar-brand macba" href="#inicio">MACBA</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link menuLink" aria-current="page" href="#"
@@ -47,10 +47,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link menuLink" href="#">exposición</a>
+              <a class="nav-link menuLink" href="#exposicion">exposición</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menuLink" href="#">Redes sociales</a>
+              <a class="nav-link menuLink" href="#redes">Redes sociales</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menuLink" href="#">Contacto</a>
@@ -76,8 +76,12 @@
       </div>
       <img class="fotoMuseo" src="museo.jpg" alt="" />
     </main>
+
+
     <div class="pattern-dots-sm slategray h-5 separador"></div>
-    <section class="exposiciones">
+
+
+    <section class="exposiciones" id="exposicion">
       <div class="textoExposiciones">
         <p>exposición.</p>
       </div>
@@ -91,7 +95,7 @@
             vigentes, es considerado como el precursor de algunos aspectos más
             radicales de la evolución del arte desde 1945.
           </p>
-          <p>Lunes a viernes de 10hs a 18hs.</p>
+          <p>Lunes a viernes de 10:00 a 18:00.</p>
         </div>
       </div>
       <div class="muestra2">
@@ -99,7 +103,7 @@
         <div class="muestraTexto2 muestraFuente">
           <h3>Los nuevos artistas contemporaneos</h3>
           <p>Seminario de cuatro semanas de analisis y debate siguiendo de cerca las novedades de los artistas de vanguardia. Se dictaran charlas y presentaciones de la escena local e internacional. </p>
-          <p>Todos los lunes de junio 19.30hs a 21.30hs.</p>
+          <p>Todos los lunes de junio 19.30 a 21.30.</p>
         </div>
       </div>
       <div class="muestra">
@@ -122,7 +126,7 @@
         <h2>MACBA</h2>
       </div>
       <div class="pie pieInfo">
-        <h3>Redes Sociales</h3>
+        <h3 id="redes">Redes Sociales</h3>
         <ul>
           <li> <a class="icon-twitter" href="" target="_blank"></a>Twitter</li>
         <li> <a class="icon-instagram" href="" target="_blank"></a>Instagram</li>
