--- a/visitas.html
+++ b/visitas.html
@@ -48,7 +48,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link menuLink" href="#exposicion">exposición</a>
+                <a class="nav-link menuLink" href="https://proyecto-integrador-hazel.vercel.app/#exposicion">exposición</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link menuLink" href="#redes">Redes sociales</a>
