subo seccion contacto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a class="navbar-brand macba" href="#inicio">MACBA</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link menuLink" aria-current="page" href="visitas.html"
+              <a class="nav-link menuLink" aria-current="page" href="https://proyecto-integrador-hazel.vercel.app/visitas.html"
                 >Visitar</a
               >
             </li>
