--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link menuLink" href="#redes">Redes sociales</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menuLink" href="#">Contacto</a>
+              <a class="nav-link menuLink" href="https://proyecto-integrador-hazel.vercel.app/contacto.html">Contacto</a>
             </li>
           </ul>
 
