--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <div class="ingreso" id="inicio">
-      <a href="">Ingreso socios</a>
-      <a href="">registrate</a>
+      <a href="usuarios.html">Ingreso socios</a>
+      <a href="usuarios.html">registrate</a>
     </div>
 
     <nav class="navbar navbar-expand-lg cabecera">
