--- a/visitas.html
+++ b/visitas.html
@@ -24,8 +24,8 @@
 </head>
 <body>
     <div class="ingreso">
-        <a href="">Ingreso socios</a>
-        <a href="">registrate</a>
+        <a href="usuarios.html">Ingreso socios</a>
+        <a href="usuarios.html">registrate</a>
       </div>
   
       <nav class="navbar navbar-expand-lg cabecera">
