--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <p class="macba2">MACBA</p>
+        <p class="macba2"><a href="https://proyecto-integrador-hazel.vercel.app/" class="irAInicio"> MACBA </a></p>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a
             class="navbar-brand macba"
